--- a/medial-queries2/index.html
+++ b/medial-queries2/index.html
@@ -9,9 +9,12 @@
     <div class="container">
       <div class="a">a</div>
       <div class="b">b</div>
+      <section></section>
       <div class="c">c</div>
       <div class="d">d</div>
       <div class="e">e</div>
+      </div>
+    </section>
       <div class="f">f</div>
     </div>
   </body>
